--- a/package.json
+++ b/package.json
@@ -23,5 +23,11 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.2.6",
     "prettier": "^3.6.2"
+  },
+  "lint-staged":{
+    "*.js":[
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
